<resources>
    <string name="app_name">Voice List</string>
    <string name="app_label">Voice List</string>

    <string name="tap_on_mic">Tap on mic to speak </string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="btn_create_label">New List</string>

    <string name="filter_label">Filter List:</string>
    <string name="type_here_hint">Type here...</string>
    <string name="btn_filter_label">Filter</string>

    <string name="btn_clear_label">Clear</string>

    <string name="sort_label">Sort by:</string>
    <string name="btn_sort_label">Sort</string>

    <string name="btn_save_label">Save</string>
    <string name="btn_back_label">Back</string>
</resources>
